@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/perl-core/Archive-Tar/Archive-Tar-1.52.ebuild,v 1.1 2009/06/15 08:20:25 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/perl-core/Archive-Tar/Archive-Tar-1.52.ebuild,v 1.2 2009/08/10 19:46:45 tove Exp $
 
 MODULE_AUTHOR=KANE
 inherit perl-module
@@ -13,7 +13,7 @@ IUSE=""
 
 DEPEND=">=virtual/perl-IO-Zlib-1.01
 	virtual/perl-IO-Compress
-	perl-core/Package-Constants
+	virtual/perl-Package-Constants
 	dev-lang/perl"
 #	dev-perl/IO-String
 
