@@ -1,6 +1,11 @@
 # ChangeLog for perl-core/Archive-Tar
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/perl-core/Archive-Tar/ChangeLog,v 1.12 2009/07/19 18:01:46 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/perl-core/Archive-Tar/ChangeLog,v 1.13 2009/08/10 19:46:45 tove Exp $
+
+  10 Aug 2009; Torsten Veller <tove@gentoo.org> Archive-Tar-1.40.ebuild,
+  Archive-Tar-1.46.ebuild, Archive-Tar-1.48.ebuild, Archive-Tar-1.50.ebuild,
+  Archive-Tar-1.52.ebuild:
+  perl-core/Package-Constants -> virtual/perl-Package-Constants
 
   19 Jul 2009; Torsten Veller <tove@gentoo.org> Archive-Tar-1.40.ebuild,
   Archive-Tar-1.46.ebuild, Archive-Tar-1.48.ebuild:
